# VLA

./: .gitignore  architecture.md  checklist.md  im_tired_boss.py  pyproject.toml  readme.md  train.ipynb
data/models/: task_prompts.json
model/: action_expert.py  fusion.py  heads.py  memory.py  mha_impl.py  refusion.py  split_vla.py  utils.py  vla.py
model/action/: __init__.py  action_expert.py  flow_matching.py
model/heads/: README.md  __init__.py  state_encoder.py  text_encoder.py  vision_encoder.py
sandbox/: sandbox.py
scripts/: evaluate_model.py  generate_mt50_data.py  get_training_data.py  inference_analytics.py  reformat_dataset.py  test_model.py  train.ipynb  train.py  train_colab.py  train_utils.py
